# tensor_prog-test

./: .gitignore  CMakeLists.txt  README.md  cmake.md  make_release.bash  tensor_prog-test.sln
Release/: tensor_prog-test.iobj  tensor_prog-test.ipdb
src/: FileTree.cpp  FileTree.h  analyser  main.cpp  main.h
tensor_prog-test/: tensor_prog-test.vcxproj  tensor_prog-test.vcxproj.filters
tensor_prog-test/Release/tensor_prog-test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tensor_prog-test.lastbuildstate  tensor_prog-test.write.1u.tlog
test_dir/: a.h  test.cpp  test.h
test_dir/ds/: test.cpp
